--- a/src/main/resources/blog/published/2018/Blog-Post-2018-07-19.md
+++ b/src/main/resources/blog/published/2018/Blog-Post-2018-07-19.md
@@ -5,15 +5,6 @@ title: Recent Post
 ---
 # Test Post
 
-Bacon ipsum dolor amet chicken brisket corned beef venison t-bone tenderloin bacon ham hock sirloin. Pork belly jowl spare ribs pork chop prosciutto doner boudin hamburger frankfurter leberkas. Cupim leberkas pork belly filet mignon jowl frankfurter. Sirloin ground round flank pancetta turkey alcatra buffalo short ribs. Shoulder beef ribs jerky landjaeger. Shoulder boudin andouille cow leberkas tenderloin. Turducken alcatra capicola buffalo hamburger tenderloin andouille.
+Removed Bacon-ipsum.
 
-Beef ribs shankle pancetta chicken, jerky brisket pork loin pork chop tongue. Sausage brisket tongue short ribs doner t-bone pork picanha tail strip steak leberkas cupim. Doner jowl kielbasa tenderloin. Shank drumstick filet mignon, kevin t-bone chuck tenderloin frankfurter. Ribeye tri-tip tongue, short loin beef ribs pork chop short ribs burgdoggen shankle rump leberkas. Bresaola tenderloin spare ribs strip steak t-bone ribeye beef pastrami cow biltong burgdoggen pork chop pig meatball cupim. Doner jerky tenderloin shankle.
-
-Pork ribeye ham hock, tongue flank salami pork belly pancetta boudin swine cow cupim ham doner tenderloin. Fatback picanha hamburger kevin turkey, chicken pancetta ham. Capicola bresaola salami t-bone. Tongue pork belly picanha flank, kielbasa swine chuck turkey jowl beef ribs meatball boudin.
-
-Pig shoulder buffalo flank short loin. Shoulder t-bone pig flank tri-tip, boudin alcatra ground round meatball. Beef turkey salami sirloin capicola t-bone frankfurter meatloaf. Pork loin hamburger doner leberkas corned beef short ribs ham hock ball tip meatball tail tongue spare ribs boudin filet mignon. Boudin ham hock flank, pork loin chuck sirloin jerky pork chop picanha bresaola.
-
-Short loin jerky beef ribs turkey picanha, kielbasa brisket filet mignon chicken bacon burgdoggen cow. Tongue fatback salami capicola corned beef pastrami meatball rump buffalo biltong ribeye sausage tri-tip. T-bone turducken pork belly short loin flank. Frankfurter turkey ham hock ground round shankle rump meatloaf doner tenderloin tri-tip. Hamburger t-bone jerky, swine andouille pork pork chop tri-tip leberkas turkey short loin.
-
-
-![Test Screenshot](https://drive.google.com/file/d/0B-Dut7djGEI6V1gzMzBLMGFkdms/view?usp=sharing)
+![Robot during 2017 robo-lympics](https://github.com/Team1091/websiteGen/blob/master/src/main/resources/images/Copy%20of%20IMG_0975.JPG?raw=true)
