--- a/src/main/resources/blog/published/2018/Blog-Post-2018-07-20.md
+++ b/src/main/resources/blog/published/2018/Blog-Post-2018-07-20.md
@@ -6,6 +6,6 @@ title: Testing an Image
 
 # Test Article
 
-Some test text.  This is *Sparta*
+2017 Robotics team with their robot.
 
 ![Test Screenshot](https://github.com/Team1091/websiteGen/blob/master/src/main/resources/images/team_photo2018season.JPG?raw=true)
