--- a/src/main/resources/blog/published/2018/Blog-Post-2018-07-19.md
+++ b/src/main/resources/blog/published/2018/Blog-Post-2018-07-19.md
@@ -3,8 +3,8 @@ layout: post
 date: 2018-07-19
 title: Blog-Post-2018-07-19
 ---
-# Test Post
+# 2017 Robot
 
-Removed Bacon-ipsum.
+The image below is 2017 robot during the robot competition.
 
 ![Robot during 2017 robo-lympics](https://github.com/Team1091/websiteGen/blob/master/src/main/resources/images/Copy%20of%20IMG_0975.JPG?raw=true)
