--- a/src/main/resources/blog/published/2018/Blog-Post-2018-07-20.md
+++ b/src/main/resources/blog/published/2018/Blog-Post-2018-07-20.md
@@ -1,10 +1,10 @@
 ---
 layout: post
 date: 2018-07-20
-title: Blog-Post-2018-07-20
+title: Blog Post 2018-07-20
 ---
 
-# Test Article
+# 2018-07-20
 
 2017 Robotics team with their robot.
 
