--- a/src/main/resources/blog/published/2018/Blog-Post-2018-07-19.md
+++ b/src/main/resources/blog/published/2018/Blog-Post-2018-07-19.md
@@ -3,7 +3,7 @@ layout: post
 date: 2018-07-19
 title: Blog Post 2018-07-19
 ---
-# 2017 Robot
+# 2017-18 Robot
 
 The image below is 2017 robot during the robot competition.
 
