--- a/src/main/resources/blog/published/2018/Blog-Post-2018-07-20.md
+++ b/src/main/resources/blog/published/2018/Blog-Post-2018-07-20.md
@@ -1,11 +1,11 @@
 ---
 layout: post
 date: 2018-07-20
-title: Blog Post 2018-07-20
+title: Blog Post Posing with the robot.
 ---
 
 # 2018-07-20
 
-2017 Robotics team with their robot.
+2017-18 Robotics team with their robot.
 
 ![Test Screenshot](https://github.com/Team1091/websiteGen/blob/master/src/main/resources/images/team_photo2018season.JPG?raw=true)
