--- a/src/main/resources/blog/published/2018/Blog-Post-2018-07-20.md
+++ b/src/main/resources/blog/published/2018/Blog-Post-2018-07-20.md
@@ -1,10 +1,10 @@
 ---
 layout: post
 date: 2018-07-20
-title: Blog Post Posing with the robot.
+title: Blog Post 2018-07-20
 ---
 
-# 2018-07-20
+# Posing with the robot.
 
 2017-18 Robotics team with their robot.
 
