--- a/src/main/resources/blog/published/2018/Blog-Post-2018-10-03.md
+++ b/src/main/resources/blog/published/2018/Blog-Post-2018-10-03.md
@@ -1,10 +1,10 @@
 ---
 layout: post
 date: 2018-10-03
-title: What we're doing.
+title: 2018-10-03
 ---
 
-#test
+# What's going on with our teams today?
 
 Programming Team: Working on the website, mostly blog posts like these and getting soleinoids for the candy-launcher. Hopefully everything will be up and running by the parade.
 Build Team: Working on candy launcher, developing skills and "Friendships" Bear 2018.
