--- a/src/main/resources/blog/published/2018/Blog-Post-2019-01-11.md
+++ b/src/main/resources/blog/published/2018/Blog-Post-2019-01-11.md
@@ -3,8 +3,8 @@ layout: post
 date: 2018-10-03
 title: 2018-10-03
 ---
-# Safty expansion
+# Safety expansion
 
-This year our team has been expanding our safty department of the team. One way is using similar 
+This year our team has been expanding our safety department of the team. One way is using similar 
 test as the school uses for the team members to use the machines. We are also making sure we have everything 
 in all the first aid kits that could be needed.
